--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no" />
     <title>ArcGIS</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://js.arcgis.com/3.17/esri/themes/calcite/dijit/calcite.css">
-   	<link rel="stylesheet" href="https://js.arcgis.com/3.17/esri/themes/calcite/esri/esri.css">
+	<link rel="stylesheet" href="https://js.arcgis.com/3.17/dijit/themes/nihilo/nihilo.css">
+   	<link rel="stylesheet" href="https://js.arcgis.com/3.17/esri/css/esri.css">
 	<link rel="stylesheet" href="style.css">
    	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
@@ -14,13 +14,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 	<script src="https://js.arcgis.com/3.17/"></script>
 
-	<script src="script.js"></script>
-	<script src="arc.js"></script>
-	<script src="mapService.js"></script>
+	<script src="app.js"></script>
+	<script src="./controllers/arc.js"></script>
+	<script src="./services/mapService.js"></script>
 </head>
     
-<body ng-app="arcApp" class="calcite">
-	<h2>AngularJS Routing Example</h2>
+<body ng-app="arcApp" class="nihilio">
+	<h2>ArcGIS with AngularJS</h2>
 	<p>Jump to the <a href="#map">map</a></p>
 	<div ng-view>
 	</div>
