fixed polygon editing and styling

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://js.arcgis.com/3.17/dijit/themes/nihilo/nihilo.css">
    	<link rel="stylesheet" href="https://js.arcgis.com/3.17/esri/css/esri.css">
-	<link rel="stylesheet" href="style.css">
-   	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+	<link rel="stylesheet" href="./css/style.css">
+   	<script src="./js/jquery.js"></script>
+	<script src="./js/angular.min.js"></script>
+	<script src="./js/angular-route.min.js"></script>
+	<script src="./js/underscore-min.js"></script>
 	<script src="https://js.arcgis.com/3.17/"></script>
 
 	<script src="app.js"></script>
